--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 }
 
 dependencies {
+    // 메일 라이브러리 추가
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     // 유효성 검사 라이브러리 추가
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     // jBCrypt 라이브러리 추가
