--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,9 @@ repositories {
 }
 
 dependencies {
-    // 메일 라이브러리 추가
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
-    // 유효성 검사 라이브러리 추가
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    //Spring Reactive Web 추가
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
     // jBCrypt 라이브러리 추가
     implementation 'org.mindrot:jbcrypt:0.4'
     // 이메일 전송 라이브러리
